--- a/app/src/main/res/layout/content_event.xml
+++ b/app/src/main/res/layout/content_event.xml
@@ -19,6 +19,40 @@
         android:divider="@android:color/transparent"
         android:dividerHeight="1dp"
         />
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/empty_state"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#f9f9fe"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/no_internet"
+            android:id="@+id/ivv"
+
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="true"
+            android:gravity="center_horizontal"
+            android:padding="10dp"
+            android:text="Oops , Bad Internet Connection "
+            />
+        <TextView
+            android:id="@+id/no_net"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="true"
+            android:gravity="center_horizontal"
+            android:padding="10dp"
+            android:textColor="#00f"
+            android:text="Click here to go back and try again"
+            />
+    </LinearLayout>
     <android.support.design.widget.CoordinatorLayout
 
         android:layout_width="match_parent"
